Cleanup. Fix broken UI for AddressSelect

--- a/src/front/shared/components/ui/DropDown/index.scss
+++ b/src/front/shared/components/ui/DropDown/index.scss
@@ -188,9 +188,8 @@
     text-align: left;
   }
 
-  &_disableIteract {
+  &.single {
     cursor: default;
-    padding-right: 22px;
   }
 
   img {
